--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">androidProjekt</string>
+    <string name="log_in">Log in</string>
+    <string name="phone_number">Phone number</string>
+    <string name="validate">Validate</string>
 </resources>
