--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="log_in">Log in</string>
     <string name="phone_number">Phone number</string>
     <string name="validate">Validate</string>
+    <string name="title_activity_add_ad">add_ad</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="settings">settings</string>
+    <string name="add">add</string>
 </resources>
