--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="short_description">Short description</string>
     <string name="long_description">Long description</string>
     <string name="location">Location</string>
+    <string name="title_activity_ads">ads</string>
 </resources>
