logo and name change

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">androidProjekt</string>
+    <string name="app_name">Sapi advertiser</string>
     <string name="log_in">Log in</string>
     <string name="phone_number">Phone number</string>
     <string name="validate">Validate</string>
